package proto_ff;

import "yd_fieldoptions.proto";


message E_FunctionunlockFunctionunlock
{
	optional int32 m_functionId = 1[(yd_fieldoptions.field_cname) = "功能id"];
	optional int32 m_openDaily = 2[(yd_fieldoptions.field_cname) = "开服多少天开放"];
	optional int32 m_openType = 3[(yd_fieldoptions.field_cname) = "开放方式"];
	optional int64 m_openVal = 4[(yd_fieldoptions.field_cname) = "开放数值"];
	optional int32 m_defaultClosed = 5[(yd_fieldoptions.field_cname) = "客户端默认为关闭"];
	optional int32 m_iconOpenVal = 6[(yd_fieldoptions.field_cname) = "提前显示icon参数"];
	optional int32 m_iconDisapearID = 7[(yd_fieldoptions.field_cname) = "icon消失ID"];
	optional int32 m_belong = 8[(yd_fieldoptions.field_cname) = "附属"];
}


message Sheet_FunctionunlockFunctionunlock
{
	repeated E_FunctionunlockFunctionunlock E_FunctionunlockFunctionunlock_List = 1[(yd_fieldoptions.field_arysize)=512];
}

message E_FunctionunlockPreview
{
	optional int32 m_functionId = 1[(yd_fieldoptions.field_cname) = "功能id"];
	optional int32 m_rewardItem = 2[(yd_fieldoptions.field_cname) = "奖励的道具ID"];
	optional int32 m_rewardNum = 3[(yd_fieldoptions.field_cname) = "道具的数量"];
}


message Sheet_FunctionunlockPreview
{
	repeated E_FunctionunlockPreview E_FunctionunlockPreview_List = 1[(yd_fieldoptions.field_arysize)=32];
}
